--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </p>
       </div>
       <div id="img">
-      <img src="https://i.postimg.cc/mr7G7WkS/example.png">
+      <img src="https://i.postimg.cc/mr7G7WkS/example.png" width=100%>
       </div>
       <div id="reg" class="lbrown">
         <p>
