--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   </head>
   <body>
     <header class="lbrown">
-      <a id="trello" class="brown" href="#">Trello</a>
+      <a id="trello" class="brown" href="index.html">Trello</a>
       <div id="login">
-        <a id="logButton" class="brown" href="#">Войти</a>
-        <a id="regButton" class="green" href="#">Регистрация</a>
+        <a id="logButton" class="brown" href="registration.html">Войти</a>
+        <a id="regButton" class="green" href="main.html">Регистрация</a>
       </div>
     </header>
     <main>
