--- a/registration.html
+++ b/registration.html
@@ -16,7 +16,7 @@
         </p>
         <input class="regForm" placeholder="Электронная почта">
         <input class="regForm" placeholder="Пароль">
-        <button class = "regForm gray" id="regButton" type="button">
+        <button class = "regForm gray" id="regButton" type="submit">
           Зарегистрироваться
         </button>
         <div id="login">
