--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <header class="lbrown">
       <a id="trello" class="brown" href="index.html">Trello</a>
       <div id="login">
-        <a id="logButton" class="brown" href="registration.html">Войти</a>
-        <a id="regButton" class="green" href="main.html">Регистрация</a>
+        <a id="logButton" class="brown" href="main.html">Войти</a>
+        <a id="regButton" class="green" href="registration.html">Регистрация</a>
       </div>
     </header>
     <main>
@@ -33,7 +33,7 @@
           </p>
           <div id="inp">
             <input id="mail" placeholder="Электронная почта">
-            <button id="regButton" type="button" class="green">
+            <button id="regButton" type="submit" class="green">
               Зарегистрироваться
             </button>
           </div>          
