--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <a id="trello" class="brown" href="index.html">Trello</a>
       <div id="login">
         <a id="logButton" class="brown" href="main.html">Войти</a>
-        <a id="regButton" class="green" href="registration.html">Регистрация</a>
+        <a id="regButtonH" class="green" href="registration.html">Регистрация</a>
       </div>
     </header>
     <main>
